# GraphDB

./: README.md  pyproject.toml
graphdb/: __init__.py
graphdb/core/: edges.py  nodes.py
graphdb/utils/: config.py  config.yml
