[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"


[tool.setuptools_scm]
local_scheme="no-local-version"
version_file = "graphdb/_version.py"


[project]
name = "graphdb"
authors = [
    {name = "Logan Lang", email = "lllang@mix.wvu.edu"}
]
description = "GraphDB is a lightweight database-like system built on top of Apache Parquet files using PyArrow."
readme = {file = "README.md", content-type = "text/markdown"}  # Ensure this matches the file used
requires-python = ">=3.8"
keywords = ["graph", "pyarrow", "data", 
            "storage", "schema evolution", "nested and complex data types", 
            "scalable", "database", "python"]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
]

dynamic = ["version"]

dependencies = [
    "python-dotenv",
    "parquetdb"
    "pyarrow",
    "pandas",
    "variconfig",
    "matplotlib",
    "beautifulsoup4",
    "requests"
]

[project.optional-dependencies]


dev = [
    "sphinx", 
    "sphinx_rtd_theme",
    "pymongo",
    "pymatgen"
]


[project.urls]
Repository = "https://github.com/romerogroup/GraphDB"
Issues = "https://github.com/romerogroup/GraphDB/issues"
Changelog = "https://github.com/romerogroup/GraphDB/CHANGELOG.md"



[tool.setuptools.packages.find]
where = ["."]
include = ["graphdb*"]
exclude = ["graphdb.tests*"]

